# PDFActionInspector

./: .gitignore  CHANGELOG.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_NOTES_v0.1.0.md  build_and_publish.bat  build_and_publish.sh  mcp_server.py  pyproject.toml  requirements.txt  setup.py  start.py
docs/: API_DOCUMENTATION.md  INSTALLATION_GUIDE.md  README.md  RELEASE_FILES_INFO.md
src/: __init__.py
src/config/: policies.py  settings.py
src/core/: cache_manager.py  error_handler.py  inspector.py
src/utils/: action_extractor.py  pdf_utils.py
tests/: __init__.py  test_pytest.py
